backend/app/assets/stylesheets/spree/backend/components/_sidebar.scss
.sidebar {
  overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
  background-color: $gray-100;
  border-right: 1px solid $gray-200;
  margin-top: 50px;

  ul.nav-sidebar {
    > li {
      border-bottom: 1px solid $gray-300;

      > a {
        text-transform: uppercase;
        letter-spacing: 1px;
        font-size: 12px;
        font-weight: 500;
        padding: 15px;
        color: $gray-700;

        .glyphicon {
          font-size: 18px;
          vertical-align: bottom;
          padding-right: 5px;
        }

        .icon-chevron-left {
          font-size: .5rem;
          line-height: 2;
          right: 5px;
          top: 50%;
          margin-top: -.5rem;
        }
      }
    }
  }

  ul.nav.nav-pills {
    background-color: white;
    border-top: 1px solid $gray-100;

    li {
      a {
        padding: 5px 15px;
        font-size: 12px;

        &:hover {
          border-radius: 0;
        }
      }

      &.selected {
        a {
          color: $success
        }
      }
    }
  }

  .spree-version {
    position: absolute;
    z-index: -1;
    left: 15px;
    bottom: 15px;
  }
}

#wrapper.sidebar-minimized #main-sidebar {
  width: 50px;
  overflow: visible;

  li {
    &:hover, &.menu-active {
      background-color: $gray-100;
    }
  }

  .icon-link, [data-toggle="collapse"] {
    text-align: center;

    .icon {
      padding: 0;
    }

    .text, .icon-chevron-left, .icon-chevron-down {
      display: none;
    }
  }

  ul.collapse.in {
    display: none;
  }

  .submenu-active {
    display: block !important;
    height: auto !important;
    position: fixed;
    top: $navbar-brand-height;
    bottom: 0;
    left: 0;
    padding: 0;
    z-index: 1000;
    display: block;
    overflow-x: hidden;
    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
    left: 50px;
    min-width: 180px;
    visibility: visible;
    background-color: $gray-100;
    border-top: none;
    border-right: 1px solid $gray-200;
    padding-top: 5px;
  }
}

